src/gen/AngularParser.java
// Generated from C:/Users/LONOVO/Desktop/AngularCompiler/AngularCompiler/src/AngularParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LINE_COMMENT=2, BLOCK_COMMENT=3, IMPORT=4, FROM=5, EXPORT=6, ARROW=7, 
		INTERFACE=8, FUNCTION=9, CLASS=10, ROUTES=11, SELECTOR=12, TEMPLATE_URL=13, 
		IMPORTS=14, STYLE_URLS=15, STYLE_URL=16, PROVIDEDIN=17, CONST=18, LET=19, 
		VAR=20, PUBLIC=21, PRIVATE=22, PROTECTED=23, ANY_TYPE=24, STRING_TYPE=25, 
		NUMBER_TYPE=26, BOOLEAN_TYPE=27, VOID_TYPE=28, ARRAY=29, UNDEFINED=30, 
		RETURN=31, THIS=32, CONSOLE=33, LOG=34, CSS_IMPORT=35, CSS_URL=36, CSS_COLOR=37, 
		CSS_UNIT=38, DIV=39, NAV=40, SPAN=41, P=42, A=43, BUTTON=44, FORM=45, 
		IMG=46, INPUTTAG=47, UL=48, LI=49, H1=50, H2=51, H3=52, H4=53, H5=54, 
		H6=55, COLOR=56, BACKGROUND=57, WIDTH=58, HEIGHT=59, MARGIN=60, PADDING=61, 
		FONTSIZE=62, DISPLAY=63, POSITION=64, BORDER=65, BOXSIZING=66, BODY=67, 
		HTML=68, ALT=69, HREF=70, SRC=71, DISABLED=72, TYPE=73, ROUTER_LINK=74, 
		ROUTER_LINK_Active=75, VALUE=76, CHECKED=77, CLICK=78, NG_SUBMIT=79, CHANGE=80, 
		SUBMIT=81, KEYDOWN=82, KEYUP=83, NGIF=84, NGFOR=85, NGSWITCH=86, NGMODEL=87, 
		COMPONENT=88, INJECTABLE=89, INPUT=90, IDDEFINER=91, NAME=92, ID=93, TITLE=94, 
		OPEN_TAG=95, CLOSE_TAG=96, SELF_CLOSD=97, OPEN_TAG_SLASH=98, COMMA=99, 
		SEMI=100, COLON=101, DOT=102, HASH=103, LPAREN=104, RPAREN=105, LCURLY=106, 
		RCURLY=107, ASSIGN=108, LBRACK=109, RBRACK=110, DOLLAR=111, PIPE=112, 
		PLUS=113, MINUS=114, STAR=115, DIVISION=116, PERCENT=117, LE=118, GE=119, 
		EQ=120, NEQ=121, DEFINITE_ASSIGN=122, PPLUS=123, MMINUS=124, SQ=125, DQ=126, 
		STRING=127, NUMBER=128, BOOL=129, NULL=130, DECORATOR=131;
	public static final int
		RULE_prog = 0, RULE_htmlProg = 1, RULE_htmlelement = 2, RULE_openCloseTag = 3, 
		RULE_startTag = 4, RULE_endTag = 5, RULE_selfClosingTag = 6, RULE_tagName = 7, 
		RULE_elementContent = 8, RULE_text = 9, RULE_statment = 10, RULE_angularInterpolation = 11, 
		RULE_angularInterpolationContent = 12, RULE_attribute = 13, RULE_attributeName = 14, 
		RULE_standardAttribute = 15, RULE_angularBinding = 16, RULE_twoWayDataBinding = 17, 
		RULE_bindingName = 18, RULE_angularEvent = 19, RULE_eventName = 20, RULE_angularDirective = 21, 
		RULE_directiveName = 22, RULE_attributeValue = 23, RULE_tsProg = 24, RULE_tsProgContent = 25, 
		RULE_importStatement = 26, RULE_importContent = 27, RULE_namedImportBlock = 28, 
		RULE_namedImportContent = 29, RULE_namedImport = 30, RULE_decorator = 31, 
		RULE_decoratorObject = 32, RULE_decoratorObjectContent = 33, RULE_decoratorPropertyName = 34, 
		RULE_decoratorPropertyValue = 35, RULE_decoratorProperty = 36, RULE_classDeclaration = 37, 
		RULE_className = 38, RULE_classBody = 39, RULE_classMember = 40, RULE_methodName = 41, 
		RULE_methodDeclaration = 42, RULE_interfaceName = 43, RULE_interfaceDeclaration = 44, 
		RULE_interfaceBody = 45, RULE_interfaceProperty = 46, RULE_interfacePropertyName = 47, 
		RULE_functionDeclaration = 48, RULE_regularFunctionName = 49, RULE_regularFunctionDeclaration = 50, 
		RULE_arrowFunctionDeclaration = 51, RULE_arrowFunctionBody = 52, RULE_parameterName = 53, 
		RULE_parameters = 54, RULE_parameter = 55, RULE_defaultValue = 56, RULE_functionBody = 57, 
		RULE_statement = 58, RULE_consoleLog = 59, RULE_consoleLogSplit = 60, 
		RULE_returnStatement = 61, RULE_arguments = 62, RULE_variableDeclarations = 63, 
		RULE_variableDeclaration = 64, RULE_decoratorBasedInput = 65, RULE_declarationTypes = 66, 
		RULE_variableName = 67, RULE_variableValue = 68, RULE_array = 69, RULE_arrayContent = 70, 
		RULE_object = 71, RULE_objectContent = 72, RULE_objectProperty = 73, RULE_objectPropertyName = 74, 
		RULE_expression = 75, RULE_arithmaticExpr = 76, RULE_primaryExpr = 77, 
		RULE_literal = 78, RULE_variableReferences = 79, RULE_memberAccess = 80, 
		RULE_memberAccessElement = 81, RULE_arrayAccess = 82, RULE_functionCall = 83, 
		RULE_binaryOperator = 84, RULE_typeSelector = 85, RULE_type = 86, RULE_arrayBracketType = 87, 
		RULE_arrayType = 88, RULE_baseType = 89, RULE_cssProg = 90, RULE_cssStatement = 91, 
		RULE_cssImportStatement = 92, RULE_cssImportContent = 93, RULE_url = 94, 
		RULE_urlStatement = 95, RULE_ruleSet = 96, RULE_selectorGroup = 97, RULE_selector = 98, 
		RULE_cssClass = 99, RULE_cssID = 100, RULE_declaration = 101, RULE_cssProperty = 102, 
		RULE_cssValue = 103, RULE_values = 104, RULE_unitOfMeasurement = 105;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "htmlProg", "htmlelement", "openCloseTag", "startTag", "endTag", 
			"selfClosingTag", "tagName", "elementContent", "text", "statment", "angularInterpolation", 
			"angularInterpolationContent", "attribute", "attributeName", "standardAttribute", 
			"angularBinding", "twoWayDataBinding", "bindingName", "angularEvent", 
			"eventName", "angularDirective", "directiveName", "attributeValue", "tsProg", 
			"tsProgContent", "importStatement", "importContent", "namedImportBlock", 
			"namedImportContent", "namedImport", "decorator", "decoratorObject", 
			"decoratorObjectContent", "decoratorPropertyName", "decoratorPropertyValue", 
			"decoratorProperty", "classDeclaration", "className", "classBody", "classMember", 
			"methodName", "methodDeclaration", "interfaceName", "interfaceDeclaration", 
			"interfaceBody", "interfaceProperty", "interfacePropertyName", "functionDeclaration", 
			"regularFunctionName", "regularFunctionDeclaration", "arrowFunctionDeclaration", 
			"arrowFunctionBody", "parameterName", "parameters", "parameter", "defaultValue", 
			"functionBody", "statement", "consoleLog", "consoleLogSplit", "returnStatement", 
			"arguments", "variableDeclarations", "variableDeclaration", "decoratorBasedInput", 
			"declarationTypes", "variableName", "variableValue", "array", "arrayContent", 
			"object", "objectContent", "objectProperty", "objectPropertyName", "expression", 
			"arithmaticExpr", "primaryExpr", "literal", "variableReferences", "memberAccess", 
			"memberAccessElement", "arrayAccess", "functionCall", "binaryOperator", 
			"typeSelector", "type", "arrayBracketType", "arrayType", "baseType", 
			"cssProg", "cssStatement", "cssImportStatement", "cssImportContent", 
			"url", "urlStatement", "ruleSet", "selectorGroup", "selector", "cssClass", 
			"cssID", "declaration", "cssProperty", "cssValue", "values", "unitOfMeasurement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'import'", "'from'", "'export'", "'=>'", "'interface'", 
			"'function'", "'class'", "'Routes'", "'selector'", "'templateUrl'", "'imports'", 
			"'styleUrls'", "'styleUrl'", "'providedIn'", "'const'", "'let'", "'var'", 
			"'public'", "'private'", "'protected'", "'any'", "'string'", "'number'", 
			"'boolean'", "'void'", "'Array'", "'undefined'", "'return'", "'this'", 
			"'console'", "'log'", "'@import'", "'url'", null, null, "'div'", "'nav'", 
			"'span'", "'p'", "'a'", "'button'", "'form'", "'img'", "'input'", "'ul'", 
			"'li'", "'h1'", "'h2'", "'h3'", "'h4'", "'h5'", "'h6'", "'color'", "'background'", 
			"'width'", "'height'", "'margin'", "'padding'", "'font-size'", "'display'", 
			"'position'", "'border'", "'box-sizing'", "'body'", "'html'", "'alt'", 
			"'href'", "'src'", "'disabled'", "'type'", "'routerLink'", "'routerLinkActive'", 
			"'value'", "'checked'", "'click'", "'ngSubmit'", "'change'", "'submit'", 
			"'keydown'", "'keyup'", "'ngIf'", "'ngFor'", "'ngSwitch'", "'ngModel'", 
			"'Component'", "'Injectable'", "'Input'", null, "'name'", "'id'", "'title'", 
			"'<'", "'>'", "'/>'", "'</'", "','", "';'", "':'", "'.'", "'#'", "'('", 
			"')'", "'{'", "'}'", "'='", "'['", "']'", "'$'", "'|'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'<='", "'>='", "'=='", "'!='", "'!'", "'++'", "'--'", 
			"'''", "'\"'", null, null, null, "'null'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "LINE_COMMENT", "BLOCK_COMMENT", "IMPORT", "FROM", "EXPORT", 
			"ARROW", "INTERFACE", "FUNCTION", "CLASS", "ROUTES", "SELECTOR", "TEMPLATE_URL", 
			"IMPORTS", "STYLE_URLS", "STYLE_URL", "PROVIDEDIN", "CONST", "LET", "VAR", 
			"PUBLIC", "PRIVATE", "PROTECTED", "ANY_TYPE", "STRING_TYPE", "NUMBER_TYPE", 
			"BOOLEAN_TYPE", "VOID_TYPE", "ARRAY", "UNDEFINED", "RETURN", "THIS", 
			"CONSOLE", "LOG", "CSS_IMPORT", "CSS_URL", "CSS_COLOR", "CSS_UNIT", "DIV", 
			"NAV", "SPAN", "P", "A", "BUTTON", "FORM", "IMG", "INPUTTAG", "UL", "LI", 
			"H1", "H2", "H3", "H4", "H5", "H6", "COLOR", "BACKGROUND", "WIDTH", "HEIGHT", 
			"MARGIN", "PADDING", "FONTSIZE", "DISPLAY", "POSITION", "BORDER", "BOXSIZING", 
			"BODY", "HTML", "ALT", "HREF", "SRC", "DISABLED", "TYPE", "ROUTER_LINK", 
			"ROUTER_LINK_Active", "VALUE", "CHECKED", "CLICK", "NG_SUBMIT", "CHANGE", 
			"SUBMIT", "KEYDOWN", "KEYUP", "NGIF", "NGFOR", "NGSWITCH", "NGMODEL", 
			"COMPONENT", "INJECTABLE", "INPUT", "IDDEFINER", "NAME", "ID", "TITLE", 
			"OPEN_TAG", "CLOSE_TAG", "SELF_CLOSD", "OPEN_TAG_SLASH", "COMMA", "SEMI", 
			"COLON", "DOT", "HASH", "LPAREN", "RPAREN", "LCURLY", "RCURLY", "ASSIGN", 
			"LBRACK", "RBRACK", "DOLLAR", "PIPE", "PLUS", "MINUS", "STAR", "DIVISION", 
			"PERCENT", "LE", "GE", "EQ", "NEQ", "DEFINITE_ASSIGN", "PPLUS", "MMINUS", 
			"SQ", "DQ", "STRING", "NUMBER", "BOOL", "NULL", "DECORATOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssProgramContext extends ProgContext {
		public CssProgContext cssProg() {
			return getRuleContext(CssProgContext.class,0);
		}
		public CssProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterCssProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitCssProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitCssProgram(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TsProgramContext extends ProgContext {
		public TsProgContext tsProg() {
			return getRuleContext(TsProgContext.class,0);
		}
		public TsProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterTsProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitTsProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitTsProgram(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlProgramContext extends ProgContext {
		public HtmlProgContext htmlProg() {
			return getRuleContext(HtmlProgContext.class,0);
		}
		public HtmlProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterHtmlProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitHtmlProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitHtmlProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			setState(215);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new TsProgramContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(212);
				tsProg();
				}
				break;
			case 2:
				_localctx = new HtmlProgramContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(213);
				htmlProg();
				}
				break;
			case 3:
				_localctx = new CssProgramContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(214);
				cssProg();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlProgContext extends ParserRuleContext {
		public HtmlProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlProg; }
	 
		public HtmlProgContext() { }
		public void copyFrom(HtmlProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlRootContext extends HtmlProgContext {
		public List<HtmlelementContext> htmlelement() {
			return getRuleContexts(HtmlelementContext.class);
		}
		public HtmlelementContext htmlelement(int i) {
			return getRuleContext(HtmlelementContext.class,i);
		}
		public HtmlRootContext(HtmlProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterHtmlRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitHtmlRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitHtmlRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlProgContext htmlProg() throws RecognitionException {
		HtmlProgContext _localctx = new HtmlProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_htmlProg);
		int _la;
		try {
			_localctx = new HtmlRootContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(218); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(217);
				htmlelement();
				}
				}
				setState(220); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OPEN_TAG );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
